<resources>
    <string name="app_name">CALCULADORA</string>
    <string name="hint">Introduce un número</string>
    <string name="sumar">+</string>
    <string name="restar">-</string>
    <string name="multiplicar">x</string>
    <string name="dividir">÷</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="guardar">Guardar</string>
    <string name="mostrar">Mostrar</string>
    <string name="resultado">Resultado: </string>
</resources>